--- a/make-3.82/w32/Makefile
+++ b/make-3.82/w32/Makefile
@@ -90,13 +90,13 @@ DIST_SOURCES = $(libw32_a_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/psmith/src/make/make-rel/config/missing --run aclocal-1.11
+ACLOCAL = ${SHELL} /home/eddy/usr/src/make/make-profiler/make-3.82/config/missing --run aclocal-1.11
 ALLOCA = 
-AMTAR = ${SHELL} /home/psmith/src/make/make-rel/config/missing --run tar
+AMTAR = ${SHELL} /home/eddy/usr/src/make/make-profiler/make-3.82/config/missing --run tar
 AR = ar
-AUTOCONF = ${SHELL} /home/psmith/src/make/make-rel/config/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/psmith/src/make/make-rel/config/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/psmith/src/make/make-rel/config/missing --run automake-1.11
+AUTOCONF = ${SHELL} /home/eddy/usr/src/make/make-profiler/make-3.82/config/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/eddy/usr/src/make/make-profiler/make-3.82/config/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/eddy/usr/src/make/make-profiler/make-3.82/config/missing --run automake-1.11
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -131,7 +131,7 @@ LIBS = -lrt
 LTLIBICONV = -liconv
 LTLIBINTL = 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/psmith/src/make/make-rel/config/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/eddy/usr/src/make/make-profiler/make-3.82/config/missing --run makeinfo
 MAKE_HOST = x86_64-unknown-linux-gnu
 MKDIR_P = /bin/mkdir -p
 MKINSTALLDIRS = $(top_builddir)/config/mkinstalldirs
@@ -157,10 +157,10 @@ STRIP =
 USE_NLS = yes
 VERSION = 3.82
 XGETTEXT = /usr/bin/xgettext
-abs_builddir = /home/psmith/src/make/make-rel/w32
-abs_srcdir = /home/psmith/src/make/make-rel/w32
-abs_top_builddir = /home/psmith/src/make/make-rel
-abs_top_srcdir = /home/psmith/src/make/make-rel
+abs_builddir = /home/eddy/usr/src/make/make-profiler/make-3.82/w32
+abs_srcdir = /home/eddy/usr/src/make/make-profiler/make-3.82/w32
+abs_top_builddir = /home/eddy/usr/src/make/make-profiler/make-3.82
+abs_top_srcdir = /home/eddy/usr/src/make/make-profiler/make-3.82
 ac_ct_CC = gcc
 am__include = include
 am__leading_dot = .
@@ -187,7 +187,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/psmith/src/make/make-rel/config/install-sh
+install_sh = ${SHELL} /home/eddy/usr/src/make/make-profiler/make-3.82/config/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
@@ -196,7 +196,7 @@ mandir = ${datarootdir}/man
 mkdir_p = /bin/mkdir -p
 oldincludedir = /usr/include
 pdfdir = ${docdir}
-prefix = /usr/local
+prefix = /home/eddy/opt/make-profiler
 program_transform_name = s,x,x,
 psdir = ${docdir}
 sbindir = ${exec_prefix}/sbin
